--- a/scholdoc-types.cabal
+++ b/scholdoc-types.cabal
@@ -1,40 +1,32 @@
-Name:                pandoc-types
-Version:             1.12.4
-Synopsis:            Types for representing a structured document
-Description:         @Text.Pandoc.Definition@ defines the 'Pandoc' data
-                     structure, which is used by pandoc to represent
-                     structured documents.  This module used to live
-                     in the pandoc package, but starting with pandoc 1.7, it
-                     has been split off, so that other packages can use it
-                     without drawing in all of pandoc's dependencies, and
-                     pandoc itself can depend on packages (like citeproc-hs)
-                     that use them.
+Name:                scholdoc-types
+Version:             0.1.3.1
+Synopsis:            Scholdoc fork of pandoc-types
+Description:         This package is a fork of @pandoc-types@ intended to
+                     support the development of Scholdoc. It includes some
+                     non-trivial extensions to the Pandoc types and builder
+                     functions that are not easily implemented by depending on
+                     and extending the @pandoc-types@ modules.
                      .
-                     @Text.Pandoc.Builder@ provides functions for building
-                     up @Pandoc@ structures programmatically.
+                     This package is currently up to date with @pandoc-types@
+                     version 1.12.4
                      .
-                     @Text.Pandoc.Generic@ provides generic functions for
-                     manipulating Pandoc documents.
-                     .
-                     @Text.Pandoc.Walk@ provides faster, nongeneric functions
-                     for manipulating Pandoc documents.
-                     .
-                     @Text.Pandoc.JSON@ provides functions for serializing
-                     and deserializing a @Pandoc@ structure to and from JSON.
+                     For descriptions of the original @pandoc-types@ package,
+                     please visit
+                     <http://hackage.haskell.org/package/pandoc-types>
 
-Homepage:            http://johnmacfarlane.net/pandoc
+Homepage:            http://scholdoc.scholarlymarkdown.com
 License:             GPL
 License-file:        COPYING
-Author:              John MacFarlane
-Maintainer:          jgm@berkeley.edu
-Bug-Reports:         http://code.google.com/p/pandoc/issues/list
-Copyright:           (c) 2006-2010 John MacFarlane
+Author:              Tim T.Y. Lin
+Maintainer:          timtylin@gmail.com
+Bug-Reports:         http://github.com/timtylin/scholdoc-types/issues
+Copyright:           (c) 2014 Tim T.Y. Lin, (c) 2006-2014 John MacFarlane
 Category:            Text
 Build-type:          Simple
 Cabal-version:       >=1.6
 Source-repository    head
   type:              git
-  location:          git://github.com/jgm/pandoc-types.git
+  location:          git://github.com/timtylin/scholdoc-types.git
 Library
   Exposed-modules:   Text.Pandoc.Definition
                      Text.Pandoc.Generic
